--- a/index.html
+++ b/index.html
@@ -1,1 +1,131 @@
-<h1>My portffolio</h1>
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>صالون لمسة إبداعية - تسجيل دخول</title>
+<style>
+    body {
+        margin: 0;
+        font-family: 'Cairo', sans-serif;
+        background-color: #111;
+        color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
+    .login-container {
+        background-color: #1a1a1a;
+        padding: 30px;
+        border-radius: 12px;
+        box-shadow: 0 0 20px rgba(0,0,0,0.5);
+        width: 90%;
+        max-width: 400px;
+        text-align: center;
+    }
+    .logo {
+        width: 100px;
+        height: 100px;
+        margin-bottom: 15px;
+    }
+    .logo img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+    .title {
+        font-size: 24px;
+        font-weight: bold;
+        margin-bottom: 20px;
+    }
+    input, select, button {
+        width: 100%;
+        padding: 12px;
+        margin: 8px 0;
+        border-radius: 8px;
+        border: none;
+        font-size: 16px;
+    }
+    input, select {
+        background-color: #222;
+        color: #fff;
+    }
+    button {
+        background-color: #f39c12;
+        color: #111;
+        font-weight: bold;
+        cursor: pointer;
+        transition: 0.3s;
+    }
+    button:hover {
+        background-color: #e67e22;
+    }
+    .btn-bookings {
+        background-color: #2980b9;
+        margin-top: 10px;
+    }
+    .btn-bookings:hover {
+        background-color: #3498db;
+    }
+</style>
+</head>
+<body>
+
+<div class="login-container">
+    <div class="logo">
+        <img src="logo.png" alt="Logo"> <!-- ضع هنا شعار الصالون -->
+    </div>
+    <div class="title">صالون لمسة إبداعية</div>
+
+    <input type="text" id="username" placeholder="اسم المستخدم">
+    <input type="password" id="password" placeholder="كلمة المرور">
+    <select id="role">
+        <option value="">اختر الدور</option>
+        <option value="admin">Admin</option>
+        <option value="employee">Employee</option>
+    </select>
+    <button onclick="login()">تسجيل الدخول</button>
+
+    <!-- زر مباشر لصفحة الحجوزات -->
+    <button class="btn-bookings" onclick="goToBookings()">صفحة الحجوزات</button>
+</div>
+
+<script>
+function login() {
+    const username = document.getElementById('username').value.trim();
+    const password = document.getElementById('password').value.trim();
+    const role = document.getElementById('role').value;
+
+    if(!username || !password || !role) {
+        alert("من فضلك املأ كل الحقول واختر الدور");
+        return;
+    }
+
+    // تحويل المستخدم لصفحة الحجوزات حسب الدور
+    if(role === "admin") {
+        window.location.href = "admin-bookings.html"; // صفحة الحجوزات للمدير
+    } else {
+        window.location.href = "employee-bookings.html"; // صفحة الحجوزات للموظف
+    }
+}
+
+// زر مباشر لصفحة الحجوزات بدون تسجيل دخول
+function goToBookings() {
+    window.location.href = "bookings.html"; // صفحة الحجوزات العامة
+}
+</script>
+<!-- كل محتوى الصفحة -->
+
+  <!-- ملفات JS القديمة -->
+  <script src="employee-work.js"></script>
+
+  <!-- Firebase + مزامنة LocalStorage -->
+  <script type="module" src="firebase-config.js"></script>
+  <script type="module" src="sync-firebase.js"></script>
+
+  <!-- أي كود JS يعتمد على LocalStorage -->
+  <script src="dashboard.js"></script>
+
+</body>
+</html>
