--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@ function login() {
 
     // تحويل المستخدم لصفحة الحجوزات حسب الدور
     if(role === "admin") {
-        window.location.href = "admin-bookings.html"; // صفحة الحجوزات للمدير
+        window.location.href = "admin_dashboard.html"; // صفحة الحجوزات للمدير
     } else {
-        window.location.href = "employee-bookings.html"; // صفحة الحجوزات للموظف
+        window.location.href = "employee-work.html"; // صفحة الحجوزات للموظف
     }
 }
 
