--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ function login() {
 
 // زر مباشر لصفحة الحجوزات بدون تسجيل دخول
 function goToBookings() {
-    window.location.href = "bookings.html"; // صفحة الحجوزات العامة
+    window.location.href = "reservation.html"; // صفحة الحجوزات العامة
 }
 </script>
 <!-- كل محتوى الصفحة -->
