--- a/index.html
+++ b/index.html
@@ -3,129 +3,144 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>صالون لمسة إبداعية - تسجيل دخول</title>
+<title>تسجيل الدخول - صالون لمسة إبداعية</title>
 <style>
-    body {
-        margin: 0;
-        font-family: 'Cairo', sans-serif;
-        background-color: #111;
-        color: #fff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-    }
-    .login-container {
-        background-color: #1a1a1a;
-        padding: 30px;
-        border-radius: 12px;
-        box-shadow: 0 0 20px rgba(0,0,0,0.5);
-        width: 90%;
-        max-width: 400px;
-        text-align: center;
-    }
-    .logo {
-        width: 100px;
-        height: 100px;
-        margin-bottom: 15px;
-    }
-    .logo img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-    }
-    .title {
-        font-size: 24px;
-        font-weight: bold;
-        margin-bottom: 20px;
-    }
-    input, select, button {
-        width: 100%;
-        padding: 12px;
-        margin: 8px 0;
-        border-radius: 8px;
-        border: none;
-        font-size: 16px;
-    }
-    input, select {
-        background-color: #222;
-        color: #fff;
-    }
-    button {
-        background-color: #f39c12;
-        color: #111;
-        font-weight: bold;
-        cursor: pointer;
-        transition: 0.3s;
-    }
-    button:hover {
-        background-color: #e67e22;
-    }
-    .btn-bookings {
-        background-color: #2980b9;
-        margin-top: 10px;
-    }
-    .btn-bookings:hover {
-        background-color: #3498db;
-    }
+body {
+    font-family:'Cairo',sans-serif;
+    background: linear-gradient(180deg,#000,#111);
+    color:#fff;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    min-height:100vh;
+    margin:0;padding:0;
+}
+header {
+    text-align:center;margin-bottom:30px;
+}
+header .logo-container {
+    display:inline-block;
+    border:4px solid gold;
+    border-radius:50%;
+    padding:5px;
+    box-shadow:0 0 20px gold;
+    margin-bottom:10px;
+}
+header .logo-container img {
+    width:100px;height:100px;border-radius:50%;object-fit:cover;
+}
+header h1 { font-size:2rem;color:gold;margin:0;text-shadow:0 0 10px gold; }
+.login-box {
+    background:#111;
+    padding:30px 25px;
+    border-radius:15px;
+    box-shadow:0 0 35px rgba(255,215,0,0.5);
+    width:350px;max-width:90%;
+    text-align:center;
+    transition:0.3s;
+    display:flex;flex-direction:column;align-items:center;
+}
+.login-box:hover { box-shadow:0 0 50px rgba(255,215,0,0.8); }
+h2 { color:gold;margin-bottom:20px;text-shadow:0 0 10px gold;font-size:1.5rem; }
+.input-group { position:relative;margin:15px 0;width:100%; }
+.input-group label { display:block;margin-bottom:5px;color:#ffd700;text-align:right; }
+.input-group input, .input-group select {
+    width:100%;padding:12px;border:none;border-radius:8px;background:#222;color:#fff;font-size:1rem;text-align:right;
+}
+button {
+    width:100%;padding:12px;margin-top:15px;background:gold;color:#111;font-weight:bold;border:none;border-radius:8px;cursor:pointer;transition:0.3s;font-size:1rem;
+}
+button:hover { transform:translateY(-2px);box-shadow:0 0 20px gold; }
+.add-user-btn { background:#2a5298;color:#fff; }
+@media(max-width:480px){
+    .login-box { padding:20px 15px; }
+    h2 { font-size:1.3rem; }
+    .input-group input,.input-group select { font-size:0.95rem;padding:10px; }
+    button { font-size:0.95rem;padding:10px; }
+}
 </style>
 </head>
 <body>
 
-<div class="login-container">
-    <div class="logo">
-        <img src="logo.png" alt="Logo"> <!-- ضع هنا شعار الصالون -->
-    </div>
-    <div class="title">صالون لمسة إبداعية</div>
+<div style="display:flex;flex-direction:column;align-items:center;width:100%;">
+<header>
+    <div class="logo-container"><img src="logo.jpg" alt="Logo"></div>
+    <h1>تسجيل الدخول</h1>
+</header>
 
-    <input type="text" id="username" placeholder="اسم المستخدم">
-    <input type="password" id="password" placeholder="كلمة المرور">
-    <select id="role">
-        <option value="">اختر الدور</option>
-        <option value="admin">Admin</option>
-        <option value="employee">Employee</option>
-    </select>
-    <button onclick="login()">تسجيل الدخول</button>
+<div class="login-box">
+<h2>تسجيل الدخول</h2>
 
-    <!-- زر مباشر لصفحة الحجوزات -->
-    <button class="btn-bookings" onclick="goToBookings()">صفحة الحجوزات</button>
+<div class="input-group">
+<label for="role">اختر النوع:</label>
+<select id="role">
+<option value="employee">موظف</option>
+<option value="admin">مدير</option>
+</select>
 </div>
 
+<div class="input-group">
+<label for="username">اسم المستخدم:</label>
+<input type="text" id="username" placeholder="اسم المستخدم">
+</div>
+
+<div class="input-group">
+<label for="password">كلمة المرور:</label>
+<input type="password" id="password" placeholder="كلمة المرور">
+</div>
+
+<button onclick="login()">دخول</button>
+<button class="add-user-btn" onclick="addUser()" style="display:none;" id="addUserBtn">إضافة مستخدم جديد</button>
+</div>
+</div>
+
+<script src="localStorage_data.js"></script>
 <script>
-function login() {
-    const username = document.getElementById('username').value.trim();
-    const password = document.getElementById('password').value.trim();
-    const role = document.getElementById('role').value;
+// بيانات المدير الثابتة
+const ADMIN_USER = "admin";
+const ADMIN_PASS = "12345";
 
-    if(!username || !password || !role) {
-        alert("من فضلك املأ كل الحقول واختر الدور");
-        return;
-    }
+// بيانات الموظفين
+let workers = getWorkers();
 
-    // تحويل المستخدم لصفحة الحجوزات حسب الدور
-    if(role === "admin") {
-        window.location.href = "admin_dashboard.html"; // صفحة الحجوزات للمدير
+// إظهار زر إضافة المستخدم للمدير فقط
+document.getElementById("role").addEventListener("change", function(){
+    document.getElementById("addUserBtn").style.display = this.value==="admin"?"inline-block":"none";
+});
+
+function login(){
+    const role = document.getElementById("role").value;
+    const username = document.getElementById("username").value.trim();
+    const password = document.getElementById("password").value.trim();
+
+    if(!username || !password){ alert("يرجى إدخال اسم المستخدم وكلمة المرور"); return; }
+
+    if(role==="admin"){
+        if(username===ADMIN_USER && password===ADMIN_PASS){
+            loginAdmin();
+            window.location.href="admin-dashboard.html";
+        } else alert("اسم المستخدم أو كلمة المرور غير صحيحة للمدير");
     } else {
-        window.location.href = "employee-work.html"; // صفحة الحجوزات للموظف
+        const emp = workers.find(w=>w.username===username && w.password===password);
+        if(emp){
+            loginEmployee(emp.username);
+            window.location.href="employee-dashboard.html";
+        } else alert("اسم المستخدم أو كلمة المرور غير صحيحة للموظف");
     }
 }
 
-// زر مباشر لصفحة الحجوزات بدون تسجيل دخول
-function goToBookings() {
-    window.location.href = "reservation.html"; // صفحة الحجوزات العامة
+// إضافة مستخدم جديد
+function addUser(){
+    const name = prompt("ادخل اسم الموظف الجديد:");
+    if(!name) return;
+    const username = prompt("ادخل اسم المستخدم للموظف:");
+    if(!username) return;
+    const password = prompt("ادخل كلمة المرور للموظف:");
+    if(!password) return;
+    workers.push({name, username, password});
+    localStorage.setItem("workers", JSON.stringify(workers));
+    alert("تم إضافة الموظف بنجاح");
 }
 </script>
-<!-- كل محتوى الصفحة -->
-
-  <!-- ملفات JS القديمة -->
-  <script src="employee-work.js"></script>
-
-  <!-- Firebase + مزامنة LocalStorage -->
-  <script type="module" src="firebase-config.js"></script>
-  <script type="module" src="sync-firebase.js"></script>
-
-  <!-- أي كود JS يعتمد على LocalStorage -->
-  <script src="dashboard.js"></script>
-
 </body>
 </html>
